# discordbot

./: .env  .env.example  .gitignore  .replit  LICENSE  README.md  bot.py  ecosystem.config.js  help.py  main.py  pyproject.toml  reddit.py  replit.nix  safebrowsing.py  safeeval.py  setup.sh  start.bat
.github/workflows/: codeql-analysis.yml  ossar-analysis.yml
cogs/: botcmds.py  events.py  help.py  ownercmds.py  premiumcommands.py  redditcommands.py  slash.py  utilcmds.py  web3cmds.py
utils/: _http.py  fetch.py  http.py  music.py  proxy.py  reddit.py
