[tool.poetry]
name = "bot"
version = "1.0"
description = "my bot"
authors = ["takipsizad <addeniz25@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "3.7^"
uuid = "^1.30"
"discord.py" = "^1.6.0"
dblpy = "^0.4.0"
motor = "^2.3.1"
pycoingecko = "^1.4.1"
pytube = "^10.6.1"
Flask = "^1.1.2"
dotenv = "^0.0.5"
jishaku = "^1.20.0"
bs4 = "^0.0.1"
tornado = "^6.1"
discord-py-slash-command = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
